disabled text-overflow: ellipsis; for radio cells (bug in chrome)

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -7208,7 +7208,6 @@ input::-ms-input-placeholder {
   font-size: 14px;
   margin-top: 5px;
   white-space: nowrap;
-  text-overflow: ellipsis;
   overflow: hidden;
   width: 100%;
 }
